--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -33,7 +33,7 @@
 -->
       <div class="listaall">
           
-          <div class="item-lista" *ngFor="let post of items" (tap)="viewerDocument(post.nombre_archivo,post.tipo_adjunto)" (press)="presentActionSheet(post.nombre_archivo,post.nombre,post.tipo_adjunto)">
+          <div class="item-lista" *ngFor="let post of items" (tap)="viewerDocument(post.nombre_archivo,post.nombre,post.tipo_adjunto)" (press)="presentActionSheet(post.nombre_archivo,post.nombre,post.tipo_adjunto)">
 
             <ion-icon ios="ios-list-box" md="md-list-box"></ion-icon>
 
